--- a/kenya.html
+++ b/kenya.html
@@ -195,7 +195,7 @@ var jq = jQuery.noConflict();
 
       <!--Red Footer Begins-->
       <div id="red-footer">
-        <div class="red-footer-links"><b>You are here:</b><img src="images/spacer.gif"/>Map / <a href="/" title='World Bank: World'>World</a> / <a href="/#region:africa">Africa</a> / Kenya</div>
+        <div class="red-footer-links"><b>You are here:</b><img src="images/spacer.gif"/>Map / <a href="/beta/" title='World Bank: World'>World</a> / <a href="/beta/#region:africa">Africa</a> / Kenya</div>
       </div>
 
       <div id="footer-maps">
