--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <li class="more"><a href="http://web.worldbank.org/WBSITE/EXTERNAL/0,,contentMDK:20130470%7EpagePK:50016803%7EpiPK:50016805%7EtheSitePK:13,00.html">View more</a></li>
       </ul>
     </div>    
-    <span id="header"><a href="http://www.worldbank.org/"> <img src="/images/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
+    <span id="header"><a href="http://www.worldbank.org/"> <img src="/wbimages/worldbank_logo.gif" alt="" width="232" height="55" border="0" id="logo" /> </a> </span>
      <div id="search-box">
 	<form action="http://search.worldbank.org/all" accept-charset="UTF-8" method="get" id="search-theme-form">
 		<div>
@@ -118,7 +118,7 @@ var proxy_host = "http://wbstaging.geocommons.com";
 var project_attributes = ["project t0", "project i0", "activity count", "financing", "sector1", "approval 0"];
 var worldbank_sectors = ["agriculture","communication","energy","education","finance","health","industry","public","transportation","water"];
 
-var sector_icons =  {"EP":"http://geoiq.local/images/icons/wb/education-on.png","AZ":"http://geoiq.local/images/icons/wb/agriculture-on.png","JB":"http://geoiq.local/images/icons/wb/health-on.png","BC":"http://geoiq.local/images/icons/wb/public-on.png","TA":"http://geoiq.local/images/icons/wb/transportation-on.png","LE":"http://geoiq.local/images/icons/wb/energy-on.png","TZ":"http://geoiq.local/images/icons/wb/transportation-on.png","LD":"http://geoiq.local/images/icons/wb/energy-on.png","WZ":"http://geoiq.local/images/icons/wb/water-on.png","BL":"http://geoiq.local/images/icons/wb/public-on.png","BU":"http://geoiq.local/images/icons/wb/public-on.png","AB":"http://geoiq.local/images/icons/wb/agriculture-on.png","FD":"http://geoiq.local/images/icons/wb/finance-on.png","ET":"http://geoiq.local/images/icons/wb/education"};
+var sector_icons =  {"EP":"http://geoiq.local/wbimages/icons/wb/education-on.png","AZ":"http://geoiq.local/wbimages/icons/wb/agriculture-on.png","JB":"http://geoiq.local/wbimages/icons/wb/health-on.png","BC":"http://geoiq.local/wbimages/icons/wb/public-on.png","TA":"http://geoiq.local/wbimages/icons/wb/transportation-on.png","LE":"http://geoiq.local/wbimages/icons/wb/energy-on.png","TZ":"http://geoiq.local/wbimages/icons/wb/transportation-on.png","LD":"http://geoiq.local/wbimages/icons/wb/energy-on.png","WZ":"http://geoiq.local/wbimages/icons/wb/water-on.png","BL":"http://geoiq.local/wbimages/icons/wb/public-on.png","BU":"http://geoiq.local/wbimages/icons/wb/public-on.png","AB":"http://geoiq.local/wbimages/icons/wb/agriculture-on.png","FD":"http://geoiq.local/wbimages/icons/wb/finance-on.png","ET":"http://geoiq.local/wbimages/icons/wb/education"};
 
 var project_sectors = {"General agriculture":"agriculture", "Agricultural extension and research":"agriculture", "fishing and forestry sector":"agriculture", 
   "Central government administration":"public","Public administration- Energy and mining": "public", "Public administration- Agriculture, fishing and forestry": "public", 
