--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ wb.init(1);
     <div id="map-content-header">
       <div class="worldmenuholder">
         <ul class="worldmenu">
-          <li class="first"><a href="javascript:return false;" >WORLD / <span id="map-title">Projects by Poverty</span></a>
+          <li class="first"><a href="javascript:return false;" >WORLD</span></a>
             <ul>
               
               
