Added a loading screen

--- a/index.html
+++ b/index.html
@@ -674,9 +674,9 @@ wb.init(1);
         <p id="activity_count">12,000</p>
       </div>
       <div class="console-info">
-        <div id="loading">Loading Map Data...</div>
-        <p class="loaded" style="display: none" title="Active projects as of June 30, 2010">active projects working in</p>
-        <p class="loaded" style="display: none" title="Project locations as of June 30, 2010">project locations</p>
+        
+        <p class="loaded" style="" title="Active projects as of June 30, 2010">active projects working in</p>
+        <p class="loaded" style="" title="Project locations as of June 30, 2010">project locations</p>
       </div>    
               <div id="layerinfo">
           <ul>
