Fixing HTML validation

--- a/about.html
+++ b/about.html
@@ -1,20 +1,19 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html class="js" xml:lang="en" xmlns="http://www.w3.org/19	99/xhtml" lang="en"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>The World Bank - Mapping for Results</title>
 
-  <link href="http://wbstaging.geocommons.com/feed" title="Mapping for Results Whats New | World Bank" type="application/rss+xml" rel="alternate">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">  
-  <link rel="shortcut icon" href="http://wbstaging.geocommons.com/favicon.png" type="image/x-icon">
+  <link href="http://wbstaging.geocommons.com/feed" title="Mapping for Results Whats New | World Bank" type="application/rss+xml" rel="alternate" />
+  <link rel="shortcut icon" href="http://wbstaging.geocommons.com/favicon.png" type="image/x-icon" />
   
-  <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css">
-  <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css">
-  <link type="text/css" rel="stylesheet" media="all" href="/css/style.css">
-  <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css">
-  <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/system-menus.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/css/collapsible.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/css/style.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/css/layout.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/css/one-off.css" />
                                                            
-  <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css">
-  <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css">
+  <link type="text/css" rel="stylesheet" media="all" href="/css/tipsy.css" />
+  <link type="text/css" rel="stylesheet" media="all" href="/css/maps.css" />
 
 <script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/prototype.js"></script>
 
