--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ if (top.frames.length!=0)
         <div id="share">
       <ul>
         
-        <li class="simpleshare_link"><a href="http://data.worldbank.org/topic/public-sector" >SHARE</a></li>
+        <li class="simpleshare_link"><a href="#" onclick="javascript:return false">SHARE</a></li>
       </ul>
     </div>
 
@@ -239,7 +239,8 @@ if (top.frames.length!=0)
 
 
 <script type="text/javascript" charset="utf-8">
-  wb.init(1,  wb.styleLegend);
+  var wb = new F1.WorldBank();
+  wb.init(1,  "World");
 </script>
 
 
