--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@ if (top.frames.length!=0)
                   <p>Overview »</p>
                   <ul>
                     <li><a href="/about#context">Context</a></li>
-                    <li><a href="/about#strategy">Strategy</a></li>
-                    <li><a href="/about#results">Feedback</a></li>
+                    <li><a href="/about#partners">Partners</a></li>
+                    <li><a href="/about#feedback">Feedback</a></li>
                   </ul>
                 </div>
                 <div class="overview-text"><strong>The Mapping for Results Beta</strong> initiative provides detailed information on our efforts to reduce poverty and alleviate human suffering in every part of the world. This website showcases information on the what and where by accessing the indicator, sector, region, and funding dropdown and toggle areas. <a class="readmore" href="/about">Read More »</a></div>
@@ -122,7 +122,7 @@ if (top.frames.length!=0)
         <div id="share">
       <ul>
         
-        <li class="simpleshare_link"><a href="#" onclick="javascript:return false">SHARE</a></li>
+        <li class="simpleshare_link"><a href="#" onclick="javascript:return false" title="Share - coming soon">SHARE</a></li>
       </ul>
     </div>
 
@@ -333,7 +333,7 @@ This platform is developed in collaboration with and validated by the National M
 
 
 
-        
+        <div id="footnote">Current projects as of June 30, 2010.</div>
     <!--Red Footer Begins-->
     <div id="network-breadcrumb">
       <div class="limiter"> <span class="breadcrumb-link"><a class="breadcrumb-link-home">You are here</a></span>
