Adding error pages

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ if (top.frames.length!=0)
         
       <ul>
         
-        <li class="simpleshare_link"><a href="#" onclick="javascript:return false" title="Share - coming soon">SHARE</a></li>
+        <li class="simpleshare_link"><a href="#" title="Share">SHARE</a></li>
       </ul>
     </div>
 
@@ -273,6 +273,15 @@ if (top.frames.length!=0)
     <!--Grey Footer Ends-->
   </div>
   <!-- /#footer -->
+  <div id="share-pane">
+    <span class="close">Close</span>
+    <ul class="links">
+      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http://wbstaging.geocommons.com" target="_new">Twitter</a></li>
+      <li class="facebook"><a href="http://facebook.com/share.php?u=http://wbstaging.geocommons.com" target="_new">Facebook</a></li>
+      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http://wbstaging.geocommons.com" target="_new">Delicious</a></li>
+      <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28http%3A%2F%2Fmaps.worldbank.org">E-Mail</a></li>
+    </ul>
+  </div>
   <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 </div>
 <!-- /#wrapper -->
