--- a/500.html
+++ b/500.html
@@ -112,7 +112,7 @@ if (top.frames.length!=0)
                     <li><a href="/about#feedback">Feedback</a></li>
                   </ul>
                 </div>
-                <div class="overview-text"><strong>The Mapping for Results Platform</strong> (<em>beta version</em>) provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <a class="readmore" href="/about">Read More »</a></div>
+                <div class="overview-text">The <strong>Mapping for Results Platform</strong> (<em>beta version</em>) provides detailed information about our work to reduce poverty and promote sustainable development around the world. This pilot website aims to visualize the location of our projects and to provide access to information about indicators, sectors, funding and results. <a class="readmore" href="/about">Read More »</a></div>
               </div>
             </div>
           </div>
