Added Google Analytics tracker

--- a/eap/philippines.html
+++ b/eap/philippines.html
@@ -291,9 +291,9 @@ if (top.frames.length!=0)
   <div id="share-pane">
     <span class="close">Close</span>
     <ul class="links">
-      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http://wbstaging.geocommons.com" target="_new">Twitter</a></li>
-      <li class="facebook"><a href="http://facebook.com/share.php?u=http://wbstaging.geocommons.com" target="_new">Facebook</a></li>
-      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http://wbstaging.geocommons.com" target="_new">Delicious</a></li>
+      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http%3A%2F%2Fmaps.worldbank.org" target="_new">Twitter</a></li>
+      <li class="facebook"><a href="http://facebook.com/share.php?u=http%3A%2F%2Fmaps.worldbank.org" target="_new">Facebook</a></li>
+      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http%3A%2F%2Fmaps.worldbank.org" target="_new">Delicious</a></li>
       <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28http%3A%2F%2Fmaps.worldbank.org">E-Mail</a></li>
     </ul>
   </div>
@@ -301,5 +301,14 @@ if (top.frames.length!=0)
 </div>
 <!-- /#wrapper -->
 <!-- /layout -->
-
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-18962568-1']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 </body></html>
