--- a/about.html
+++ b/about.html
@@ -17,11 +17,11 @@
 <script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/prototype.js"></script>
 
   <script type="text/javascript" src="/js/jquery-1.js"></script>
-<script type="text/javascript" charset="utf-8">
-var jq = jQuery.noConflict();
-if (top.frames.length!=0)
-  top.location=self.document.location;
-</script>  
+    <script type="text/javascript" charset="utf-8">
+    var jq = jQuery.noConflict();
+    if (top.frames.length!=0)
+      top.location=self.document.location;
+    </script>  
   <script type="text/javascript" src="/js/tipsy.js"></script>
   <script type="text/javascript" src="/js/jquery_002.js"></script>
   <script type="text/javascript" src="/js/ui.js"></script>
@@ -191,7 +191,7 @@ if (top.frames.length!=0)
   <span>Malnutrition (MDG1)</span>
 <p><em>Malnutrition prevalence, weight for age (% of children under 5)</em></p>
 
-<p>Prevalence of child malnutrition is the percentage of children under age 5 whose height for age (stunting) is more than two standard deviations below the median for the international reference population ages 0-59 months. For children up to two years old height is measured by recumbent length. For older children height is measured by stature while standing. The data are based on the WHO's new child growth standards released in 2006. Source: World Health Organization, Global Database on Child Growth and Malnutrition.
+<p>Malnutrition prevalence, weight for age (% of children under 5): Prevalence of child malnutrition is the percentage of children under age 5 whose height for age (stunting) is more than two standard deviations below the median for the international reference population ages 0-59 months. For children up to two years old height is measured by recumbent length. For older children height is measured by stature while standing. The data are based on the WHO's new child growth standards released in 2006.
 </p>
 <p>Catalog Sources: World Development Indicators</p>
   
