--- a/afr/kenya.html
+++ b/afr/kenya.html
@@ -254,7 +254,7 @@
     </li>
   </ul>
   <ul class="dropmenu  ">
-    <li title="Resultings Coming Soon"><a href="#" onclick="return false">RESULTS</a>
+    <li title=""><a href="#" onclick="return false">RESULTS</a>
       
       <ul>
         
