Cached API calls and all project locations

--- a/404.html
+++ b/404.html
@@ -27,6 +27,9 @@
   <script type="text/javascript" src="/js/ui.js"></script>
   <script type="text/javascript" src="/js/effects_002.js"></script>
   <script type="text/javascript" src="/js/effects.js"></script>
+  <script type="text/javascript" src="/js/ddsmoothmenu.js"></script>
+  <script type="text/javascript" src="/js/anylinkcssmenu.js"></script>
+  
 
 <script type="text/javascript" charset="utf-8" src="/js/f1.js"></script>
 <script type="text/javascript" charset="utf-8" src="http://wbstaging.geocommons.com/javascripts/f1.api.js"></script>
@@ -71,7 +74,7 @@
       <div class="navigation"> <a class="network-home" href="http://www.worldbank.org">The World Bank</a>
         <ul class="links network-links">
           <li><a href="http://www.worldbank.org/about">About</a></li>
-          <li><a class="active" href="http://wbstaging.geocommons.com">Maps</a></li>
+          <li><a class="active" href="http://data.worldbank.org">Data</a></li>
           <li><a href="http://econ.worldbank.org">Research</a></li>
           <li><a href="http://www.worldbank.org/wbi">Learning</a></li>
           <li><a href="http://www.worldbank.org/news">News</a></li>
